src/validation/tests/snapshots/rusty__validation__tests__variable_length_array_test__naming__global_vla_does_not_cause_name_conflict.snap
---
source: src/validation/tests/variable_length_array_test.rs
expression: diag
---
error[E044]: VLAs can not be defined as global variables
  ┌─ <internal>:3:13
  │
3 │             vla : ARRAY[*, *] OF DINT;
  │             ^^^ VLAs can not be defined as global variables
